# caracal

./: .bumpversion.cfg  .clang-format  .dockerignore  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  404.html  CMakeLists.txt  Dockerfile  Dockerfile-static  Doxyfile  LICENSE  README.md  analyze_t.cpp  analyze_t.hpp  classic_sender_t.cpp  classic_sender_t.hpp  conanfile.txt  database_t.cpp  database_t.hpp  diamond_t.cpp  diamond_t.hpp  dump_t.cpp  dump_t.hpp  dynamics_t.cpp  dynamics_t.hpp  edge_t.cpp  flake.nix  heartbeat_t.cpp  heartbeat_t.hpp  index.html  json.hpp  main.cpp  main_diamonds.cpp  main_dynamics.cpp  main_graph.cpp  main_probabilistic.cpp  main_read.cpp  mkdocs.yml  (+26 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: binaries.yml  build.yml  ci.yml  deploy-latest.yml  deploy-tag.yml  docker-hub.yml  docker.yml  documentation.yml  pypi.yml  tests.yml
apps/: caracal-config.h.in  caracal-read.cpp  caracal.cpp  diamond-miner-config.h.in  diamond-miner-prober.cpp  diamond-miner-reader.cpp
cmake/: CodeCoverage.cmake  FindCRC.cmake  FindCatch2.cmake  FindCperm.cmake  FindCppCoro.cmake  FindFmt.cmake  FindLPM.cmake  FindNetUtils.cmake  FindPatricia.cmake  FindPfRing.cmake  FindRangeV3.cmake  FindTins.cmake  Findbxzstr.cmake  Findlpm.cmake  Findpybind11.cmake  Findspdlog.cmake  MunkeiVersionFromGit.cmake  conan.cmake
data/: arp.pcap  icmp-icmp-echo-reply.pcap  icmp-icmp-echo-reply.txt  icmp-icmp-ttl-exceeded-mpls.pcap  icmp-icmp-ttl-exceeded-mpls.txt  icmp-icmp-ttl-exceeded.pcap  icmp-icmp-ttl-exceeded.txt  icmp6-icmp6-echo-reply.pcap  icmp6-icmp6-echo-reply.txt  icmp6-icmp6-ttl-exceeded.pcap  icmp6-icmp6-ttl-exceeded.txt  sample_results.csv  sample_results.pcap  udp-icmp-ttl-exceeded.pcap  udp-icmp-ttl-exceeded.txt  udp-icmp6-ttl-exceeded.pcap  udp-icmp6-ttl-exceeded.txt
data/doxygen-tags/: cppreference-doxygen-web.tag.xml
database/: clickhouse_diamonds_t.cpp  clickhouse_diamonds_t.hpp  clickhouse_dynamics_t.cpp  clickhouse_dynamics_t.hpp  clickhouse_graph_t.cpp  clickhouse_graph_t.hpp  clickhouse_redundancy_t.cpp  clickhouse_redundancy_t.hpp  clickhouse_t.cpp  clickhouse_t.hpp  debug.sql  requests.sql  test_requests.sql
dev/: index.html
docs/: dev.md  index.md  python.md  usage.md
include/caracal/: builder.hpp  caracal.hpp  checked.hpp  checksum.hpp  constants.hpp  experimental.hpp  integrity.hpp  io.hpp  lpm.hpp  packet.hpp  parser.hpp  pretty.hpp  probe.hpp  prober.hpp  prober_config.hpp  protocols.hpp  rate_limiter.hpp  reader.hpp  reply.hpp  sender.hpp  sniffer.hpp  socket.hpp  statistics.hpp  timestamp.hpp  utilities.hpp
include/dminer/: builder.hpp  checked.hpp  constants.hpp  dminer.hpp  heartbeat.hpp  logging.hpp  lpm.hpp  network_utils_t.hpp  packet.hpp  packet_parser.hpp  packets_utils.hpp  parameters_utils_t.hpp  parser.hpp  pretty.hpp  probe.hpp  prober.hpp  prober_config.hpp  rate_limiter.hpp  reader.hpp  reply.hpp  sender.hpp  sniffer.hpp  socket.hpp  statistics.hpp  timestamp.hpp  utilities.hpp
maths/: stopping_points_t.cpp  stopping_points_t.hpp
paper/: paper.md
python/: conversions.hpp  logging.hpp  pycaracal.cpp
python/pycaracal/: __init__.py
python/tests/: test_async.py  test_experimental.py  test_pycaracal.py
search/: search_index.json
src/: builder.cpp  checksum.cpp  classic_sender_t.cpp  classic_sender_t.hpp  diamond-miner-config.h.in  diamond-miner-prober.cpp  diamond-miner-reader.cpp  dminer_config.h.in  experimental.cpp  heartbeat.hpp  heartbeat_config.cpp  heartbeat_config.hpp  heartbeat_t.cpp  heartbeat_t.hpp  heartbeat_test.cpp  integrity.cpp  io.cpp  logging.hpp  lpm.cpp  main.cpp  network_utils_t.cpp  network_utils_t.hpp  packet.cpp  packet_parser.hpp  packet_parser_test.cpp  packets_utils.cpp  packets_utils.hpp  parameters_utils_t.cpp  parameters_utils_t.hpp  parser.cpp  patricia.cpp  pfring_sender_t.cpp  pfring_sender_t.hpp  pretty.cpp  pretty.hpp  probe.cpp  probe.hpp  probe_test.cpp  prober.cpp  prober_config.cpp  (+25 more)
src/sources/: csv.cpp  csv.hpp  csv_test.cpp  memory.hpp
tests/: builder_bench.cpp  builder_test.cpp  checked_test.cpp  checksum_test.cpp  environment.hpp  experimental_test.cpp  heartbeat_test.cpp  integrity_test.cpp  lpm_test.cpp  packet_parser_test.cpp  parser_test.cpp  pretty_test.cpp  probe_bench.cpp  probe_test.cpp  prober_config_test.cpp  prober_test.cpp  protocols_test.cpp  rate_limiter_test.cpp  reader_test.cpp  statistics_test.cpp  timestamp_test.cpp  utilities_test.cpp
usage/: index.html
utils/: bits_utils_t.cpp  bits_utils_t.hpp  graph_utils_t.cpp  graph_utils_t.hpp  network_utils_t.cpp  network_utils_t.hpp  packets_utils.cpp  packets_utils.hpp  parameters_utils_t.cpp  struct_utils_t.hpp  timing_utils.hpp
